# tcpp

./: .gitignore  CMakeLists.txt  play.cpp
.github/workflows/: cmake-single-platform.yml
source/: tcppLibrary.hpp
tests/: CMakeLists.txt  coreTests.cpp  lexerTests.cpp  main.cpp  stringInputStreamTests.cpp
